--- a/config/linux-t440p.config
+++ b/config/linux-t440p.config
@@ -680,6 +680,7 @@ CONFIG_MQ_IOSCHED_DEADLINE=y
 # CONFIG_IOSCHED_BFQ is not set
 # end of IO Schedulers
 
+CONFIG_ASN1=y
 CONFIG_INLINE_SPIN_UNLOCK_IRQ=y
 CONFIG_INLINE_READ_UNLOCK=y
 CONFIG_INLINE_READ_UNLOCK_IRQ=y
@@ -2613,7 +2614,9 @@ CONFIG_CRYPTO_HASH2=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_AKCIPHER2=y
+CONFIG_CRYPTO_AKCIPHER=y
 CONFIG_CRYPTO_KPP2=y
+CONFIG_CRYPTO_KPP=y
 CONFIG_CRYPTO_ACOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -2631,8 +2634,8 @@ CONFIG_CRYPTO_GLUE_HELPER_X86=y
 #
 # Public-key cryptography
 #
-# CONFIG_CRYPTO_RSA is not set
-# CONFIG_CRYPTO_DH is not set
+CONFIG_CRYPTO_RSA=y
+CONFIG_CRYPTO_DH=y
 # CONFIG_CRYPTO_ECDH is not set
 # CONFIG_CRYPTO_ECRDSA is not set
 # CONFIG_CRYPTO_SM2 is not set
@@ -2854,7 +2857,9 @@ CONFIG_DQL=y
 CONFIG_GLOB=y
 # CONFIG_GLOB_SELFTEST is not set
 CONFIG_NLATTR=y
+CONFIG_CLZ_TAB=y
 # CONFIG_IRQ_POLL is not set
+CONFIG_MPILIB=y
 CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
