Changes to permit debugging of construction of secret.cpio that is appended in clear newc cpio on top of uncompressed initramfs. To debug working 6.5.10 non-working 6.6.2 testing kernel
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/x230-maximized/x230-maximized.config
+++ b/boards/x230-maximized/x230-maximized.config
@@ -14,8 +14,8 @@ CONFIG_COREBOOT_CONFIG=config/coreboot-x230-maximized.config
 CONFIG_LINUX_CONFIG=config/linux-x230-maximized.config
 
 #Enable DEBUG output
-#export CONFIG_DEBUG_OUTPUT=y
-#export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
+export CONFIG_DEBUG_OUTPUT=y
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
 
 #Additional hardware support
 CONFIG_LINUX_USB=y
@@ -64,7 +64,7 @@ CONFIG_DROPBEAR=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
-export CONFIG_BOOT_KERNEL_ADD=""
+export CONFIG_BOOT_KERNEL_ADD="debug"
 export CONFIG_BOOT_KERNEL_REMOVE="intel_iommu=on intel_iommu=igfx_off"
 export CONFIG_BOOT_DEV="/dev/sda1"
 export CONFIG_BOARD_NAME="Thinkpad X230-maximized"
