--- a/boards/z220-cmt-hotp-maximized/z220-cmt-hotp-maximized.config
+++ b/boards/z220-cmt-hotp-maximized/z220-cmt-hotp-maximized.config
@@ -2,5 +2,6 @@
 include $(pwd)/boards/z220-cmt-maximized/z220-cmt-maximized.config
 
 CONFIG_HOTPKEY=y
+export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 export CONFIG_BOARD_NAME="Hewlett-Packard Z220 Convertible Minitower (HOTP)"
