--- a/boards/UNTESTED_p8z77-m_pro-tpm1-hotp-maximized/UNTESTED_p8z77-m_pro-tpm1-hotp-maximized.config
+++ b/boards/UNTESTED_p8z77-m_pro-tpm1-hotp-maximized/UNTESTED_p8z77-m_pro-tpm1-hotp-maximized.config
@@ -2,5 +2,6 @@
 include $(pwd)/boards/UNTESTED_p8z77-m_pro-tpm1-maximized/UNTESTED_p8z77-m_pro-tpm1-maximized.config
 
 CONFIG_HOTPKEY=y
+export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 export CONFIG_BOARD_NAME="P8Z77-M PRO-HOTP"
