--- a/boards/qemu-coreboot-fbwhiptail-tpm1-hotp/qemu-coreboot-fbwhiptail-tpm1-hotp.config
+++ b/boards/qemu-coreboot-fbwhiptail-tpm1-hotp/qemu-coreboot-fbwhiptail-tpm1-hotp.config
@@ -37,6 +37,7 @@ CONFIG_MBEDTLS=y
 CONFIG_DROPBEAR=y
 CONFIG_MSRTOOLS=y
 CONFIG_HOTPKEY=y
+export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 #Uncomment only one of the following block
 #Required for graphical gui-init (FBWhiptail)
