--- a/boards/t440p-hotp-maximized/t440p-hotp-maximized.config
+++ b/boards/t440p-hotp-maximized/t440p-hotp-maximized.config
@@ -2,5 +2,6 @@
 include $(pwd)/boards/t440p-maximized/t440p-maximized.config
 
 CONFIG_HOTPKEY=y
+export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 export CONFIG_BOARD_NAME="ThinkPad T440p-hotp-maximized"
