--- a/boards/w541-hotp-maximized/w541-hotp-maximized.config
+++ b/boards/w541-hotp-maximized/w541-hotp-maximized.config
@@ -2,5 +2,6 @@
 include $(pwd)/boards/w541-maximized/w541-maximized.config
 
 CONFIG_HOTPKEY=y
+export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 export CONFIG_BOARD_NAME="ThinkPad W541-hotp-maximized"
