--- a/config/busybox.config
+++ b/config/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Thu Oct  5 11:19:09 2023
+# Sat Jan 13 18:40:20 2024
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -372,7 +372,7 @@ CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
 # CONFIG_DUMPKMAP is not set
 # CONFIG_FGCONSOLE is not set
-# CONFIG_KBD_MODE is not set
+CONFIG_KBD_MODE=y
 # CONFIG_LOADFONT is not set
 # CONFIG_SETFONT is not set
 # CONFIG_FEATURE_SETFONT_TEXTUAL_MAP is not set
