--- a/config/busybox.config
+++ b/config/busybox.config
@@ -370,7 +370,7 @@ CONFIG_FEATURE_WC_LARGE=y
 # CONFIG_CHVT is not set
 CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
-# CONFIG_DUMPKMAP is not set
+CONFIG_DUMPKMAP=y
 # CONFIG_FGCONSOLE is not set
 CONFIG_KBD_MODE=y
 # CONFIG_LOADFONT is not set
